Добавлена возможность сохранения выбранного города при клике на элемент автокомплита. Реализована отправка POST-запроса на сервер для сохранения города с последующей перезагрузкой страницы. Обновлен шаблон `CityModal` для передачи атрибута `data-commit` с значением `select-city` для активации этой функции.

--- a/templates/components/CityModal.html.twig
+++ b/templates/components/CityModal.html.twig
@@ -9,7 +9,7 @@
       </button>
     </div>
     <div class="p-4 border-b" data-testid="city-modal-search">
-      <div data-module="autocomplete" data-placeholder="Ваш город" data-input-selector="#city-modal-input"></div>
+      <div data-module="autocomplete" data-placeholder="Ваш город" data-input-selector="#city-modal-input" data-commit="select-city"></div>
       <input id="city-modal-input" type="text" autocomplete="off" placeholder="Ваш город" class="mt-2 w-full border rounded px-3 py-2" />
     </div>
     <div class="max-h-96 min-h-24 overflow-y-auto" id="city-modal-list" data-list data-testid="city-modal-list"></div>
