Добавлена карта компонента Spinner и обновлен индекс компонентов. В шаблоне Spinner добавлен ai-якорь и атрибут data-testid для улучшения тестирования. Обновлены параметры компонента, включая видимость, размер и цвет.

--- a/templates/components/spinner.html.twig
+++ b/templates/components/spinner.html.twig
@@ -1,3 +1,4 @@
+{# ai:component=spinner map=@component_spinner_map.mdc v=1 #}
 {#
   Spinner component
   Parameters:
@@ -15,7 +16,7 @@
 {% set spinner_class = extra_class ?? '' %}
 {% set spinner_color = color ?? 'primary' %}
 
-<div id="{{ spinner_id }}"
+<div id="{{ spinner_id }}" data-testid="spinner"
      class="{% if spinner_overlay %}absolute inset-0 z-20{% else %}relative{% endif %} {{ spinner_class }}"
      data-module="spinner"
      data-visible="{{ spinner_visible ? 'true' : 'false' }}"
