--- a/templates/catalog/_delivery_selector.html.twig
+++ b/templates/catalog/_delivery_selector.html.twig
@@ -1,3 +1,4 @@
+{# ai:component=delivery-selector map=@component_delivery-selector_map.mdc v=1 #}
 {# ai:module=delivery-selector root="#delivery" #}
 <div id="delivery" data-module="delivery-selector" data-testid="delivery-selector" class="p-4 border rounded mb-6">
   {% set _checkout = app.session.get('checkout') %}
